[project]
name = "halloween-ghost-processor"
version = "0.1.0"
description = "Real-time video processing system for creating ghost effects on detected people"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "ghost_processor.py",
]

